fdo#53210 SwDoc::UpdateExpFlds don't crash when hiding all sections

Change-Id: I9b7a61f18f987214708195a89f6e346c865c7f9f